tests/compile_fail/custom_norequisites.stderr
error[E0277]: the trait bound `MyEnum: std::str::FromStr` is not satisfied
  --> $DIR/custom_norequisites.rs:17:10
   |
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ the trait `std::str::FromStr` is not implemented for `MyEnum`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MyStruct: std::str::FromStr` is not satisfied
  --> $DIR/custom_norequisites.rs:17:10
   |
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ the trait `std::str::FromStr` is not implemented for `MyStruct`
   |
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `to_string` found for enum `MyEnum` in the current scope
  --> $DIR/custom_norequisites.rs:17:10
   |
6  | enum MyEnum {
   | -----------
   | |
   | method `to_string` not found for this
   | doesn't satisfy `MyEnum: std::fmt::Display`
   | doesn't satisfy `MyEnum: std::string::ToString`
...
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ method not found in `MyEnum`
   |
   = note: the method `to_string` exists but the following trait bounds were not satisfied:
           `MyEnum: std::fmt::Display`
           which is required by `MyEnum: std::string::ToString`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `to_string` found for struct `MyStruct` in the current scope
  --> $DIR/custom_norequisites.rs:17:10
   |
12 | struct MyStruct {
   | ---------------
   | |
   | method `to_string` not found for this
   | doesn't satisfy `MyStruct: std::fmt::Display`
   | doesn't satisfy `MyStruct: std::string::ToString`
...
17 | #[derive(StructConf)]
   |          ^^^^^^^^^^ method not found in `MyStruct`
   |
   = note: the method `to_string` exists but the following trait bounds were not satisfied:
           `MyStruct: std::fmt::Display`
           which is required by `MyStruct: std::string::ToString`
   = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
